--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="index1.html" class="nav-link">About</a>
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="index3.html" class="nav-link">Portfolio</a>
+                    <a href="portfolio.html" class="nav-link">Portfolio</a>
                 </li>
             </ul>
     </div>
@@ -119,7 +119,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\particles.js"></script>
-<script src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\app.js"></script>
+<script src="particles.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
