--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,10 @@
                             <a href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index1.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index2.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -89,7 +89,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\particles.js"></script>
-    <script src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\app.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
