--- a/about.html
+++ b/about.html
@@ -55,10 +55,10 @@
                         <a href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index3.html" class="nav-link">Portfolio</a>
+                        <a href="portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index2.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
         </div>
@@ -87,7 +87,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\particles.js"></script>
-    <script src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\app.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
