--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\css\custom.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
         
     <title>Portfolio | Shella Mae</title>
     
