--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto text-center">
                     <li class="nav-item">
-                        <a href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\index.html" class="nav-link">Home</a>
+                        <a href="Portfolio/index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
+                        <a href="Portfolio/portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                        <a href="Portfolio/contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
         </div>
