--- a/about.html
+++ b/about.html
@@ -74,8 +74,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="text-center image-wrapper">
-                        <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
+                    <div class="Portfolio/img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
                     </div>
                 </div>
             </div>
