--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="index-starter.html">
-                <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\ella-legaspi-high-resolution-logo-transparent.svg" width="225" height="75" alt="logo for Jon Smith Designs">
+                <img src="img/ella-legaspi-high-resolution-logo-transparent.svg" width="225" height="75" alt="logo for Jon Smith Designs">
             <span class="d-none">Shella Mae Designs</span>
             </a>
             <button
