--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\css\custom.css" rel="stylesheet">
+    <link href="css\custom.css" rel="stylesheet">
         
     <title>Portfolio</title>
 </head>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\ella-legaspi-high-resolution-logo-transparent.svg" width="225" height="85" alt="logo for Shella's Designs">
+                    <img src="img/ella-legaspi-high-resolution-logo-transparent.svg" width="225" height="85" alt="logo for Shella's Designs">
                     <span class="d-none">Shella Legaspi</span>
                 </a>
 
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto text-center">
                         <li class="nav-item">
-                            <a href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="about.html" class="nav-link">About</a>
