--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\analog.jpg" alt="Analog Image" height="250px">
+                        <img src="Portfolio/img/analog.jpg" alt="Analog Image" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Analog Webpage</h5>
                             <p class="card-text">In this Analog we specialize in the sale and repair of classic keyboards, in particular the Fender Rhodes,etc.</p>
@@ -60,7 +60,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\anime.jpg" alt="Anime Image" height="250px">
+                        <img src="Portfolio/img/anime.jpg" alt="Anime Image" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Artist Webpage</h5>
                             <p class="card-text">Izuku Midoriya, also known by his hero name "Deku", main protagonist of the manga series My Hero Academia.</p>
@@ -72,7 +72,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\poetry.jpg" alt="poetry Image" height="250px">
+                        <img src="Portfolio/img/poetry.jpg" alt="poetry Image" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Poetry Webpage</h5>
                             <p class="card-text">Conducting a number of poetry workshops and symposiums throughout the year.                                   </p>
