--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto text-center">
                     <li class="nav-item">
-                        <a href="Portfolio/index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Portfolio/portfolio.html" class="nav-link">Portfolio</a>
+                        <a href="portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Portfolio/contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
         </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="Portfolio/img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
+                    <div class="\img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
                     </div>
                 </div>
             </div>
