--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="./img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
+                    <div class="img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
                     </div>
                 </div>
             </div>
