--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\css\custom.css" rel="stylesheet">
+    <link href="./css/custom.css" rel="stylesheet">
         
     <title>Portfolio | Shella Mae</title>
     
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="index-starter.html">
-                <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\ella-legaspi-high-resolution-logo-transparent.svg" width="225" height="75" alt="logo for Jon Smith Designs">
+                <img src="./img/ella-legaspi-high-resolution-logo-transparent.svg" width="225" height="75" alt="logo for Jon Smith Designs">
             <span class="d-none">Shella Mae Designs</span>
             </a>
             <button
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto text-center">
                     <li class="nav-item">
-                        <a href="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="portfolio.html" class="nav-link">Portfolio</a>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-center image-wrapper">
-                        <img src="C:\Users\shella\OneDrive\Desktop\ITWS\portfolio\img\Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
+                        <img src="./img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
                     </div>
                 </div>
             </div>
