--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                         <img src="./img/poetry.jpg" alt="poetry Image" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Poetry Webpage</h5>
-                            <p class="card-text">Conducting a number of poetry workshops and symposiums throughout the year.                                   </p>
+                            <p class="card-text">Poetry is a literature that conveys a thought, tells a story in a concentrated, lyrical arrangement of words.                            </p>
                             <a href="https://shellamaelegaspi.github.io/PoetryWorkshop/" class="btn btn-outline-dark">Learn More!</a>
                         </div>
                     </div>
