--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                 <div class="col-md-6">
 
                     <div class="text-center image-wrapper">
-                        <img src="./img/Myimg.png" alt="Shella Mae's Image" style="max-width: 100%;">
+                        <img src="./img/Myimg.png" alt="Shella Mae's Image" style="max-width: 70%" >
 
                     </div>
                 </div>
